--- a/run/install
+++ b/run/install
@@ -10,6 +10,7 @@
 # You should have received a copy of the GNU Affero General Public License along with this program. If not, see <http://www.gnu.org/licenses/>.
 
 installdocker: True
+nginxsettings: True
 ansible_role_nginx: True
 galaxyfirewall: True
 galaxywelcome: True
